dev.log
▲ Next.js 16.2.9 (Turbopack)
- Local:         http://localhost:3000
- Network:       http://192.168.0.66:3000
- Environments: .env.local, .env
✓ Ready in 566ms

 GET / 200 in 1232ms (next.js: 141ms, proxy.ts: 502ms, application-code: 588ms)
TypeError: fetch failed
    at ignore-listed frames {
  [cause]: Error [ConnectTimeoutError]: Connect Timeout Error (attempted addresses: 104.18.38.10:443, 172.64.149.246:443, timeout: 10000ms)
      at ignore-listed frames {
    code: 'UND_ERR_CONNECT_TIMEOUT'
  }
}
TypeError: fetch failed
    at ignore-listed frames {
  [cause]: Error [ConnectTimeoutError]: Connect Timeout Error (attempted addresses: 104.18.38.10:443, 172.64.149.246:443, timeout: 10000ms)
      at ignore-listed frames {
    code: 'UND_ERR_CONNECT_TIMEOUT'
  }
}
TypeError: fetch failed
    at ignore-listed frames {
  [cause]: AggregateError: 
      at ignore-listed frames {
    code: 'ETIMEDOUT',
    [errors]: [ [Error], [Error] ]
  }
}
TypeError: fetch failed
    at ignore-listed frames {
  [cause]: AggregateError: 
      at ignore-listed frames {
    code: 'ETIMEDOUT',
    [errors]: [ [Error], [Error] ]
  }
}
Error [AuthRetryableFetchError]: fetch failed
    at ignore-listed frames {
  __isAuthError: true,
  status: 0,
  code: undefined
}
Error [AuthRetryableFetchError]: fetch failed
    at ignore-listed frames {
  __isAuthError: true,
  status: 0,
  code: undefined
}
 GET /api/profile 401 in 32.5s (next.js: 412ms, application-code: 32.1s)
TypeError: fetch failed
    at ignore-listed frames {
  [cause]: Error [ConnectTimeoutError]: Connect Timeout Error (attempted addresses: 172.64.149.246:443, 104.18.38.10:443, timeout: 10000ms)
      at ignore-listed frames {
    code: 'UND_ERR_CONNECT_TIMEOUT'
  }
}
[browser] TypeError: Failed to fetch
    at new Promise (<anonymous>)
TypeError: fetch failed
    at ignore-listed frames {
  [cause]: Error [ConnectTimeoutError]: Connect Timeout Error (attempted addresses: 104.18.38.10:443, 172.64.149.246:443, timeout: 10000ms)
      at ignore-listed frames {
    code: 'UND_ERR_CONNECT_TIMEOUT'
  }
}
TypeError: fetch failed
    at ignore-listed frames {
  [cause]: Error [ConnectTimeoutError]: Connect Timeout Error (attempted addresses: 172.64.149.246:443, 104.18.38.10:443, timeout: 10000ms)
      at ignore-listed frames {
    code: 'UND_ERR_CONNECT_TIMEOUT'
  }
}
TypeError: fetch failed
    at ignore-listed frames {
  [cause]: Error [ConnectTimeoutError]: Connect Timeout Error (attempted addresses: 172.64.149.246:443, 104.18.38.10:443, timeout: 10000ms)
      at ignore-listed frames {
    code: 'UND_ERR_CONNECT_TIMEOUT'
  }
}
Error [AuthRetryableFetchError]: fetch failed
    at ignore-listed frames {
  __isAuthError: true,
  status: 0,
  code: undefined
}
Error [AuthRetryableFetchError]: fetch failed
    at ignore-listed frames {
  __isAuthError: true,
  status: 0,
  code: undefined
}
 GET /api/profile 401 in 31.9s (next.js: 6ms, application-code: 31.9s)
TypeError: fetch failed
    at ignore-listed frames {
  [cause]: AggregateError: 
      at ignore-listed frames {
    code: 'ETIMEDOUT',
    [errors]: [ [Error], [Error] ]
  }
}
TypeError: fetch failed
    at ignore-listed frames {
  [cause]: AggregateError: 
      at ignore-listed frames {
    code: 'ETIMEDOUT',
    [errors]: [ [Error], [Error] ]
  }
}
TypeError: fetch failed
    at ignore-listed frames {
  [cause]: AggregateError: 
      at ignore-listed frames {
    code: 'ETIMEDOUT',
    [errors]: [ [Error], [Error] ]
  }
}
[browser] TypeError: Failed to fetch
    at handleAuth (src/components/auth/AuthForm.tsx:46:53)
  44 |       } else {
  45 |         console.log('[Auth] Calling signInWithPassword...');
> 46 |         const { data, error } = await supabase.auth.signInWithPassword({
     |                                                     ^
  47 |           email,
  48 |           password,
  49 |         }); (src/components/auth/AuthForm.tsx:46:33)
[browser] [Auth] CRITICAL ERROR: AuthRetryableFetchError: Failed to fetch
    at async handleAuth (src/components/auth/AuthForm.tsx:46:33)
  44 |       } else {
  45 |         console.log('[Auth] Calling signInWithPassword...');
> 46 |         const { data, error } = await supabase.auth.signInWithPassword({
     |                                 ^
  47 |           email,
  48 |           password,
  49 |         }); (src/components/auth/AuthForm.tsx:58:15)
TypeError: fetch failed
    at ignore-listed frames {
  [cause]: AggregateError: 
      at ignore-listed frames {
    code: 'ETIMEDOUT',
    [errors]: [ [Error], [Error] ]
  }
}
Error [AuthRetryableFetchError]: fetch failed
    at ignore-listed frames {
  __isAuthError: true,
  status: 0,
  code: undefined
}
Error [AuthRetryableFetchError]: fetch failed
    at ignore-listed frames {
  __isAuthError: true,
  status: 0,
  code: undefined
}
 GET /api/profile 401 in 31.9s (next.js: 8ms, application-code: 31.9s)
[browser] TypeError: Failed to fetch
[browser] AuthRetryableFetchError: Failed to fetch
